--- a/index.html
+++ b/index.html
@@ -475,14 +475,14 @@
 
     <div class="container">
 
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/ssc1.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc1.html'">
             <img src="webpa/ssc1.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 1</h2>
                 <p>السعودية الرياضية 1</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/ssc2.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc2.html'">
             <img src="webpa/ssc2.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 2</h2>
@@ -490,28 +490,28 @@
             </div>
         </div>
 
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/ssc3.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc3.html'">
             <img src="webpa/ssc3.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 3</h2>
                 <p>السعودية الرياضية 3</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/ssc4.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc4.html'">
             <img src="webpa/ssc4.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 4</h2>
                 <p>السعودية الرياضية 4</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/ssc5.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc5.html'">
             <img src="webpa/ssc5.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 5</h2>
                 <p>السعودية الرياضية 5</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/sscex1.html'">
+        <div class="movie-poster" onclick="window.location.href='sscex1.html'">
             <img src="webpa/sscex1.webp"
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
@@ -519,7 +519,7 @@
                 <p>السعودية الرياضية اكسترا 1</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/sscex2.html'">
+        <div class="movie-poster" onclick="window.location.href='sscex2.html'">
             <img src="webpa/sscex2.webp"
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
@@ -527,7 +527,7 @@
                 <p>السعودية الرياضية اكسترا 2</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://mcomm1.github.io/sscex3.html'">
+        <div class="movie-poster" onclick="window.location.href='sscex3.html'">
             <img src="webpa/sscex3.webp"
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
