--- a/ssc1.html
+++ b/ssc1.html
@@ -307,9 +307,9 @@
 
 
 <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <footer>ssc sports &copy; 2025 | by AbdulGhani-Gailan</footer>
+ <footer>ssc sports &copy; 2025 | by AbdulGhani-Gailan(777944585)</footer>
+<footer><a href="http://m.com"<strong>العودة لصفحة الشبكة</strong></a></footer>
 
-<nav class="navbar"><a href="http://m.com" class="navbar-brand" style="font-size: 20px"><strong>العودة لصفحة الشبكة</strong></a></nav>
 
 </body>
 <script>
